// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
<div
  className="sp-radio__group"
>
  <label
    className="sp-checkbox__item"
  >
    <input
      checked={false}
      className="sp-checkbox__input"
      disabled={false}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="organe"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="0"
    />
    <span
      className="sp-checkbox__text"
    >
      organe
    </span>
  </label>
  <label
    className="sp-checkbox__item sp-checkbox__item--checked"
  >
    <input
      checked={true}
      className="sp-checkbox__input"
      disabled={false}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="banana"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="0"
    />
    <span
      className="sp-checkbox__text"
    >
      banana
    </span>
  </label>
  <label
    className="sp-checkbox__item"
  >
    <input
      checked={false}
      className="sp-checkbox__input"
      disabled={false}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="coconut"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="0"
    />
    <span
      className="sp-checkbox__text"
    >
      coconut
    </span>
  </label>
  <label
    className="sp-checkbox__item sp-checkbox__item--disabled"
  >
    <input
      checked={false}
      className="sp-checkbox__input"
      disabled={true}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="carot"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="-1"
    />
    <span
      className="sp-checkbox__text"
    >
      carot
    </span>
  </label>
</div>
`;

exports[`Checkbox disabled 1`] = `
<div
  className="sp-radio__group"
>
  <label
    className="sp-checkbox__item sp-checkbox__item--disabled"
  >
    <input
      checked={false}
      className="sp-checkbox__input"
      disabled={true}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="organe"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="-1"
    />
    <span
      className="sp-checkbox__text"
    >
      organe
    </span>
  </label>
  <label
    className="sp-checkbox__item sp-checkbox__item--checked sp-checkbox__item--disabled"
  >
    <input
      checked={true}
      className="sp-checkbox__input"
      disabled={true}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="banana"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="-1"
    />
    <span
      className="sp-checkbox__text"
    >
      banana
    </span>
  </label>
  <label
    className="sp-checkbox__item sp-checkbox__item--disabled"
  >
    <input
      checked={false}
      className="sp-checkbox__input"
      disabled={true}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="coconut"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="-1"
    />
    <span
      className="sp-checkbox__text"
    >
      coconut
    </span>
  </label>
  <label
    className="sp-checkbox__item sp-checkbox__item--disabled"
  >
    <input
      checked={false}
      className="sp-checkbox__input"
      disabled={true}
      name="vegetable"
      onChange={[Function]}
      required={false}
      tabIndex="-1"
      type="checkbox"
      value="carot"
    />
    <span
      className="sp-checkbox__icon"
      onKeyDown={[Function]}
      tabIndex="-1"
    />
    <span
      className="sp-checkbox__text"
    >
      carot
    </span>
  </label>
</div>
`;
